refactor: split app to dev & prod runs & update README accordingly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "llm-service"
 version = "0.1.0"
 requires-python = ">=3.13"
 dependencies = [
-    "fastapi",
+    "fastapi[standard]",
     "uvicorn[standard]",
     "httpx",
     "pydantic-settings",
