--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,9 @@
-version: "3.8"
-
 services:
-  llm-service:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: llm_manager
+  app:
+    build: .
+    container_name: soc-app-prod
     ports:
-      - "8000:8000"
-    env_file:
-      - .env
+      - "8000:80"
     environment:
-      - PORT=8000
-      - LOG_LEVEL=info
-    restart: on-failure
-    volumes:
-      - .:/app
+      - ENVIRONMENT=production
+    restart: always
